[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aio-mrr"
version = "0.2.0"
description = "Async library for MiningRigRentals API v2"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "GRinvest", email = "info@sibneuro.tech" },
    { name = "SibNeuroTech", email = "info@sibneuro.tech" },
]
maintainers = [
    { name = "GRinvest", email = "info@sibneuro.tech" },
]
keywords = ["mining", "miningrigrentals", "api", "async", "aiohttp", "cryptocurrency", "blockchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
urls = { Homepage = "https://github.com/GRinvest/aio-mrr", Documentation = "https://GRinvest.github.io/aio-mrr/", Repository = "https://github.com/GRinvest/aio-mrr.git", Issues = "https://github.com/GRinvest/aio-mrr/issues" }

dependencies = [
    "aiohttp>=3.13.0,<4.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "tenacity>=9.1.0,<10.0.0",
    "loguru>=0.7.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.26.0",
    "aioresponses>=0.7.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs-static-i18n>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aio_mrr"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = [
    "UP046",   # Pydantic Generic models require old Generic[T] syntax
]

[tool.ruff.lint.per-file-ignores]
"src/aio_mrr/models/__init__.py" = ["I001"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
case-sensitive = true
no-lines-before = ["future", "standard-library", "third-party"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
